@@ -7,14 +7,13 @@ _tmstatus.sh() {
     COMPREPLY=()
 
     cur="${COMP_WORDS[COMP_CWORD]}"
-#    prev="${COMP_WORDS[COMP_CWORD - 1]}"
 
     #
     # list of command line options
     #   only the autocompletion with long options is implemented: long options are more readable and quick to enter since we are
     #   using autocompletion.
     #
-    opts="--log --help --progress --quick --speed --today --version"
+    opts="--log --help --progress --quick --speed --today --verbose --version"
 
     if [[ ${cur} == -* || ${COMP_CWORD} -eq 1 ]]; then
         # shellcheck disable=2207
